debtcalc.css
body {
    margin: auto;
}

#main_content {
    margin: auto;
    width: 760px;
    height: 630px;
    background-color: #00548A;
    padding: 10px;
}

#main_content h1,h2,h3,h4,h5 {
    margin: 0px;
    padding: 0px;
    font-style: italic;
    text-align: center;
}

#main_content h1 {
    color: white;
    padding: 5px 0px;
}

#main_content p {
    margin: 0px;
    padding: 0px;
}

#left_panel {
    float: left;
    width: 260px;
    padding: 5px;
    background-color: white;
    text-align: left;
}

#left_panel input,select {
    margin: 0;
}

#settings {
    padding: 5px 35px;
}

#custom_target {
    width: 25px;
}

.slideContainer {
    position: relative;
    float: left;
    text-align: center;
    width: 120px;
    padding: 5px 2px;
    background-color: #e0e0e0;
    border-style: solid;
    border-color: white;
}

.selector {
    text-align: left;
}

.inputSlider {
    width: 10px;
    margin: 0 auto;
    height: 220px;
    margin-top: 10px;
    margin-bottom: 10px;
}

.ui-slider .ui-slider-handle {
    background: #00548A;
}

.inputField {
    float: none !important;
    width: 35px;
    text-align: right;
}

#reset_area {
    text-align: center;
    margin-bottom: 0px !important;
}

#right_panel {
    margin-left: 10px;
    float: left;
    text-align: right;
}

#right_panel h2 {
    margin-top: 10px;
    text-align: center;
}

#chart_area {
    background-color: white;
}

#trump_background {
    background: url('t-chart-image.png');
    background-size: 100% 100%;
    background-repeat: no-repeat;
}

#clinton_background {
    background: url('c-chart-image.png');
    background-size: 100% 100%;
    background-repeat: no-repeat;
}

#series_area {
    height: 300px;
    width: 480px;
}

#chart_caption {
    font-size: 11pt;
    font-style: italic;
    text-align: left;
}

#results_area {
    padding: 10px 25px;
    margin: 55px 40px;
    background-color: white;
}

#results_area p {
    text-align: left;
}

#results_area .score {
    font-weight: bold;
    float: right;
}

#results_area #tax_up {
    display: inline-block;
    width: 28px;
    text-align: right;
}

